[gd_scene load_steps=18 format=3 uid="uid://f3v631cpq70r"]

[ext_resource type="Texture2D" uid="uid://2u4fu5eycj8x" path="res://player/player0.png" id="1"]
[ext_resource type="Script" path="res://player/player.gd" id="2"]
[ext_resource type="Texture2D" uid="uid://bn2ksv6u2qksq" path="res://player/beam.png" id="3"]
[ext_resource type="Texture2D" uid="uid://cgjr3adl2m8nd" path="res://player/field.png" id="4"]
[ext_resource type="Texture2D" uid="uid://bstpw7ypjs2d2" path="res://effects/flare_01.png" id="5"]
[ext_resource type="Shader" path="res://player/teleport.gdshader" id="5_vog3e"]

[sub_resource type="CircleShape2D" id="1"]

[sub_resource type="CircleShape2D" id="CircleShape2D_lrw1w"]
radius = 128.25

[sub_resource type="CircleShape2D" id="5"]
radius = 128.0

[sub_resource type="RectangleShape2D" id="6"]
size = Vector2(128, 960)

[sub_resource type="ShaderMaterial" id="ShaderMaterial_g2mto"]
shader = ExtResource("5_vog3e")
shader_parameter/progress = 0.0
shader_parameter/noise_density = 60.0
shader_parameter/beam_size = 0.15
shader_parameter/color = Color(0, 1.02, 1.2, 1)

[sub_resource type="AtlasTexture" id="2"]
atlas = ExtResource("1")
region = Rect2(0, 0, 32, 44)

[sub_resource type="AtlasTexture" id="3"]
atlas = ExtResource("1")
region = Rect2(32, 0, 32, 44)

[sub_resource type="SpriteFrames" id="4"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("2")
}, {
"duration": 1.0,
"texture": SubResource("3")
}],
"loop": true,
"name": &"default",
"speed": 15.0
}]

[sub_resource type="Animation" id="9"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Flare:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, -24)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Flare:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1, 1)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("AnimatedSprite2D:material:shader_parameter/progress")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}

[sub_resource type="Animation" id="10"]
resource_name = "warp"
length = 2.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Flare:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5, 2),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(0, -24), Vector2(0, -24), Vector2(0, 10)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Flare:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.5, 2, 2.5),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Vector2(1e-05, 1e-05), Vector2(1, 1), Vector2(1, 1), Vector2(1e-05, 1e-05)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("AnimatedSprite2D:material:shader_parameter/progress")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.5, 2),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [0.0, 0.0, 1.0]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_dylpu"]
_data = {
"RESET": SubResource("9"),
"warp": SubResource("10")
}

[node name="Player" type="Area2D" groups=["player"]]
script = ExtResource("2")

[node name="HitBox" type="CollisionShape2D" parent="."]
shape = SubResource("1")

[node name="ShootTimer1" type="Timer" parent="."]

[node name="ShootTimer2" type="Timer" parent="."]

[node name="ShieldRegen" type="Timer" parent="."]

[node name="SpecialTimer" type="Timer" parent="."]
one_shot = true

[node name="TractorTimer" type="Timer" parent="."]
wait_time = 0.2

[node name="FirePos1" type="Marker2D" parent="."]
position = Vector2(-3, -18)

[node name="FirePos2" type="Marker2D" parent="."]
position = Vector2(3, -18)

[node name="FirePos3" type="Marker2D" parent="."]
position = Vector2(-12, 3)

[node name="FirePos4" type="Marker2D" parent="."]
position = Vector2(12, 3)

[node name="Tractor" type="Area2D" parent="."]

[node name="Collision" type="CollisionShape2D" parent="Tractor"]
shape = SubResource("CircleShape2D_lrw1w")

[node name="Radius" type="Area2D" parent="."]

[node name="HitBox" type="CollisionShape2D" parent="Radius"]
shape = SubResource("5")

[node name="Sprite2D" type="Sprite2D" parent="Radius"]
visible = false
modulate = Color(0, 0.501961, 1, 0.501961)
position = Vector2(0.500004, 0)
scale = Vector2(1.4, 1.4)
texture = ExtResource("4")

[node name="Beam" type="Area2D" parent="."]

[node name="HitBox" type="CollisionShape2D" parent="Beam"]
position = Vector2(0, -480)
shape = SubResource("6")

[node name="Sprite2D" type="Sprite2D" parent="Beam"]
visible = false
modulate = Color(0, 0.501961, 1, 0.501961)
position = Vector2(4.47035e-07, -480)
scale = Vector2(10.6667, 40)
texture = ExtResource("3")

[node name="Flare" type="Sprite2D" parent="."]
modulate = Color(0.8, 0.933333, 1, 1)
position = Vector2(0, -24)
texture = ExtResource("5")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
material = SubResource("ShaderMaterial_g2mto")
sprite_frames = SubResource("4")
autoplay = "default"

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_dylpu")
}

[connection signal="area_entered" from="." to="." method="_on_Player_area_entered"]
[connection signal="timeout" from="ShootTimer1" to="." method="_on_ShootTimer1_timeout"]
[connection signal="timeout" from="ShootTimer2" to="." method="_on_ShootTimer2_timeout"]
[connection signal="timeout" from="ShieldRegen" to="." method="_on_ShieldRegen_timeout"]
[connection signal="timeout" from="SpecialTimer" to="." method="_on_SpecialTimer_timeout"]
[connection signal="timeout" from="TractorTimer" to="." method="_on_tractor_timer_timeout"]
[connection signal="area_entered" from="Tractor" to="." method="_on_tractor_area_entered"]
[connection signal="area_entered" from="Radius" to="." method="_on_Radius_area_entered"]
[connection signal="area_entered" from="Beam" to="." method="_on_Beam_area_entered"]
